--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>My CV</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 </body>
 </html>
